fix main container vertical overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,6 @@
   color: #E5E5E5;
 }
 
-html, body, #root {
-  width: 100%;
-  min-height: 100%;
-}
-
-h1 {
-  margin:0;
-}
-
 body {
   background: linear-gradient(76.67deg, #D61F6C 51.12%, #BE1A5F 51.22%);
   padding: 1rem;
